--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,9 @@ branches:
     - master
 shallow_clone: true
 os: Visual Studio 2013
+platform: x64
 configuration:
-  - Release|x64
+  - Release
 #  - RelWithDebInfo
 #environment:
 #  GITHUB_USER_PASSWORD:
