--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,34 @@ configuration:
 #  set PATH=%PATH%;C:/CUDA/v9.0/bin
 #  nvcc -V
 #  pip install requests
+install: |
+  echo Downloading CUDA toolkit 8
+  appveyor DownloadFile http://fomori.org/otacon/custom_cuda.zip
+  7z x custom_cuda.zip -ocuda
+  cd cuda
+  echo Installing CUDA toolkit 8
+  setup.exe -s compiler_8.0 ^
+               cublas_8.0 ^
+               cublas_dev_8.0 ^
+               cudart_8.0 ^
+               curand_8.0 ^
+               curand_dev_8.0 ^
+               visual_studio_integration_8.0
+
+  if NOT EXIST "%ProgramFiles%\NVIDIA GPU Computing Toolkit\CUDA\v8.0\bin\cudart64_80.dll" ( 
+    echo "Failed to install CUDA"
+    exit /B 1
+  )
+
+  cd ..
+                             
+  set PATH=%ProgramFiles%\NVIDIA GPU Computing Toolkit\CUDA\v8.0\bin;%PATH%
+  set CUDA_PATH=%ProgramFiles%\NVIDIA GPU Computing Toolkit\CUDA\v8.0
+  set CUDA_PATH_V9_0=%ProgramFiles%\NVIDIA GPU Computing Toolkit\CUDA\v8.0
+
+  nvcc -V
+
+  cd "%APPVEYOR_BUILD_FOLDER%"
 before_build:
   - msbuild nheqminer/nheqminer.sln /t:cpu_tromp /p:Configuration=Release /p:Platform="x64" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 #   - cmake -G "Visual Studio 14 2015 Win64" -H. -Bbuild -DETHASHCUDA=ON -DAPICORE=ON
