--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ install: |
   cd cuda
   echo Installing CUDA toolkit 8
   setup.exe -s compiler_8.0 cublas_8.0 cublas_dev_8.0 cudart_8.0 curand_8.0 curand_dev_8.0 visual_studio_integration_8.0
-
+  tree %ProgramFiles%\NVIDIA GPU Computing Toolkit\
   if NOT EXIST "%ProgramFiles%\NVIDIA GPU Computing Toolkit\CUDA\v8.0\bin\cudart64_80.dll" ( 
     echo "Failed to install CUDA"
     exit /B 1
